--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/material": "^5.15.15",
+    "next": "14.2.1",
     "react": "^18",
+    "react-datepicker": "^6.8.0",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-hook-form": "^7.51.3",
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
