Initialized: header and footer components

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,15 @@
     "paths": {
       "@/*": ["./src/*"]
     }
+  },
+  "module": {
+    "rules": [
+      {
+        "test": /\.(jpe?g|png)$/i,
+        "include": path.resolve(__dirname, './'),
+        "use": ['file-loader']
+      }
+    ]
   }
 }
+
