--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.12",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "next": "14.2.1",
     "react": "^18",
