--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^6.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
