--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "typescript": "5.4.5"
   }
 }
