--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@react-icons/all-files": "^4.1.0",
     "next": "14.2.1",
     "react": "^18",
     "react-datepicker": "^6.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.1",
     "sharp": "^0.33.3",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
